missing file bugfix, better contrast on text

--- a/src/app/components/home/settings.scss
+++ b/src/app/components/home/settings.scss
@@ -136,7 +136,7 @@ h3 {
 }
 
 .buttonDescriptionText {
-  color: $gray-50;
+  color: $black;
   display: block;
   font-size: 12px;
   left: 60px;
